--- a/IAI_6/main.ipynb
+++ b/IAI_6/main.ipynb
@@ -2,9 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.8640 - loss: 0.4490 - val_accuracy: 0.9830 - val_loss: 0.0582\n",
+      "Epoch 2/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9809 - loss: 0.0613 - val_accuracy: 0.9857 - val_loss: 0.0515\n",
+      "Epoch 3/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9856 - loss: 0.0431 - val_accuracy: 0.9880 - val_loss: 0.0411\n",
+      "Epoch 4/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9903 - loss: 0.0317 - val_accuracy: 0.9912 - val_loss: 0.0355\n",
+      "Epoch 5/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9922 - loss: 0.0227 - val_accuracy: 0.9897 - val_loss: 0.0348\n",
+      "Epoch 6/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9935 - loss: 0.0195 - val_accuracy: 0.9907 - val_loss: 0.0312\n",
+      "Epoch 7/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9956 - loss: 0.0132 - val_accuracy: 0.9922 - val_loss: 0.0307\n",
+      "Epoch 8/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9963 - loss: 0.0108 - val_accuracy: 0.9905 - val_loss: 0.0346\n",
+      "Epoch 9/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9967 - loss: 0.0093 - val_accuracy: 0.9915 - val_loss: 0.0407\n",
+      "Epoch 10/10\n",
+      "\u001b[1m844/844\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 6ms/step - accuracy: 0.9977 - loss: 0.0070 - val_accuracy: 0.9875 - val_loss: 0.0514\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9840 - loss: 0.0585\n",
+      "Test accuracy: 0.9871000051498413\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import struct\n",
@@ -12,15 +41,14 @@
     "\n",
     "path = \"../IAI_5/data/\"\n",
     "\n",
-    "# Helper functions to load MNIST data from IDX files\n",
     "def load_mnist_images(file_path):\n",
     "    with open(file_path, 'rb') as f:\n",
     "        magic, num_images, rows, cols = struct.unpack('>IIII', f.read(16))\n",
     "        if magic != 2051:\n",
     "            raise ValueError(f\"Invalid magic number {magic} in file: {file_path}\")\n",
     "        image_data = np.frombuffer(f.read(), dtype=np.uint8)\n",
-    "        images = image_data.reshape((num_images, rows, cols, 1))  # Add channel dimension for CNN\n",
-    "        return images / 255.0  # Normalize pixel values to [0, 1]\n",
+    "        images = image_data.reshape((num_images, rows, cols, 1))\n",
+    "        return images / 255.0\n",
     "\n",
     "def load_mnist_labels(file_path):\n",
     "    with open(file_path, 'rb') as f:\n",
@@ -36,40 +64,28 @@
     "test_images = load_mnist_images(path + 't10k-images.idx3-ubyte')\n",
     "test_labels = load_mnist_labels(path + 't10k-labels.idx1-ubyte')\n",
     "\n",
-    "# Define the CNN model\n",
     "model = tf.keras.Sequential([\n",
-    "    # Convolutional layer 1: 32 filters, 3x3 kernel, ReLU activation\n",
     "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
-    "    # Max pooling layer 1: 2x2 pool size\n",
     "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
     "\n",
-    "    # Convolutional layer 2: 64 filters, 3x3 kernel, ReLU activation\n",
     "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
-    "    # Max pooling layer 2: 2x2 pool size\n",
     "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
     "\n",
-    "    # Flatten layer: Converts 2D feature maps to 1D feature vector\n",
     "    tf.keras.layers.Flatten(),\n",
     "\n",
-    "    # Fully connected (Dense) layer: 128 neurons, ReLU activation\n",
-    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
     "\n",
-    "    # Dropout layer: Drop 30% of neurons during training to reduce overfitting\n",
-    "    tf.keras.layers.Dropout(0.3),\n",
-    "\n",
-    "    # Output layer: 10 neurons (one for each digit), softmax activation for probabilities\n",
     "    tf.keras.layers.Dense(10, activation='softmax')\n",
     "])\n",
     "\n",
-    "# Compile the model\n",
     "model.compile(optimizer='adam',\n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "# Train the model\n",
+    "# Training the model\n",
     "model.fit(train_images, train_labels, epochs=10, batch_size=64, validation_split=0.1)\n",
     "\n",
-    "# Evaluate the model\n",
+    "# Evaluating the model\n",
     "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
     "print(f\"Test accuracy: {test_acc}\")\n"
    ]
@@ -82,7 +98,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
