--- a/IAI_5/main.ipynb
+++ b/IAI_5/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor(-432.84055, shape=(), dtype=float32)\n"
+      "tf.Tensor(1316.509, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -20,25 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 619us/step - accuracy: 0.8575 - loss: 0.4874\n",
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mateusz/.venv_3_12/lib/python3.12/site-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 607us/step - accuracy: 0.8619 - loss: 0.4723\n",
       "Epoch 2/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 606us/step - accuracy: 0.9550 - loss: 0.1519\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 564us/step - accuracy: 0.9544 - loss: 0.1543\n",
       "Epoch 3/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 587us/step - accuracy: 0.9674 - loss: 0.1097\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 570us/step - accuracy: 0.9672 - loss: 0.1068\n",
       "Epoch 4/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 563us/step - accuracy: 0.9732 - loss: 0.0846\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 570us/step - accuracy: 0.9719 - loss: 0.0914\n",
       "Epoch 5/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 562us/step - accuracy: 0.9757 - loss: 0.0762\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 313us/step - accuracy: 0.9753 - loss: 0.0853\n",
-      "Test accuracy: 0.9783999919891357\n"
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 571us/step - accuracy: 0.9766 - loss: 0.0756\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 332us/step - accuracy: 0.9717 - loss: 0.0907\n",
+      "Test accuracy: 0.9763000011444092\n"
      ]
     }
    ],
@@ -49,7 +63,6 @@
     "\n",
     "path = 'data/'\n",
     "\n",
-    "# Function to load MNIST images\n",
     "def load_mnist_images(file_path):\n",
     "    with open(file_path, 'rb') as f:\n",
     "        # Read the magic number and metadata\n",
@@ -62,7 +75,6 @@
     "        images = image_data.reshape((num_images, rows, cols))\n",
     "        return images / 255.0  # Normalize pixel values to [0, 1]\n",
     "\n",
-    "# Function to load MNIST labels\n",
     "def load_mnist_labels(file_path):\n",
     "    with open(file_path, 'rb') as f:\n",
     "        # Read the magic number and metadata\n",
@@ -74,31 +86,26 @@
     "        labels = np.frombuffer(f.read(), dtype=np.uint8)\n",
     "        return labels\n",
     "\n",
-    "# Load training and test data\n",
-    "train_images = load_mnist_images(path + 'data/train-images.idx3-ubyte')\n",
-    "train_labels = load_mnist_labels(path + 'data/train-labels.idx1-ubyte')\n",
-    "test_images = load_mnist_images(path + 'data/t10k-images.idx3-ubyte')\n",
-    "test_labels = load_mnist_labels(path + 'data/t10k-labels.idx1-ubyte')\n",
+    "train_images = load_mnist_images(path + 'train-images.idx3-ubyte')\n",
+    "train_labels = load_mnist_labels(path + 'train-labels.idx1-ubyte')\n",
+    "test_images = load_mnist_images(path + 't10k-images.idx3-ubyte')\n",
+    "test_labels = load_mnist_labels(path + 't10k-labels.idx1-ubyte')\n",
     "\n",
-    "# Build the model\n",
     "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Flatten(input_shape=(28, 28)),  # Flatten 28x28 images into 1D array\n",
-    "    tf.keras.layers.Dense(128, activation='relu'),  # Fully connected layer with 128 neurons\n",
-    "    tf.keras.layers.Dropout(0.2),                   # Dropout layer to prevent overfitting\n",
-    "    tf.keras.layers.Dense(10, activation='softmax') # Output layer with 10 neurons (digits 0-9)\n",
+    "    tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
     "])\n",
     "\n",
-    "# Compile the model\n",
     "model.compile(optimizer='adam',\n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "# Train the model\n",
     "model.fit(train_images, train_labels, epochs=5)\n",
     "\n",
-    "# Evaluate the model\n",
     "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
-    "print(f\"Test accuracy: {test_acc}\")\n"
+    "print(f\"Test accuracy: {test_acc}\")"
    ]
   }
  ],
